mid way through adding signal strength logging